add in personal information regarding web development and images of projects

--- a/css/style.css
+++ b/css/style.css
@@ -428,7 +428,7 @@ h1, h2, h3, h4, h5, h6 {
 /*========== banner_area css =========*/
 .banner_area {
   min-height: 100vh;
-  background: url("../image/profile.jpg") no-repeat scroll center 0/cover;
+  background: url("../x/snow.jpg") no-repeat scroll center 0/cover;
   position: relative;
   z-index: 1;
   text-align: center;
@@ -447,7 +447,7 @@ h1, h2, h3, h4, h5, h6 {
   height: 100%;
   top: 0;
   left: 0;
-  background: url("../image/grid-70.png") no-repeat scroll center 0/cover;
+  background: url("../x/snow.jpg") no-repeat scroll center 0/cover;
   z-index: -1;
 }
 
