--- a/css/style.css
+++ b/css/style.css
@@ -1404,3 +1404,9 @@ h1, h2, h3, h4, h5, h6 {
 /*---------------------------------------------------- */
 
 /*# sourceMappingURL=style.css.map */
+
+/* Gabe's Stuff */
+a.navbar-brand.logo_h {
+  height: 100px;
+  width: 100px;
+}
